deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      imagePullSecrets:
      - name: mysecret
      containers:
      - name: hello-world
        image: tfadopipeline.jfrog.io/tf-ado-docker-local/hello:latest
        ports: 
        - containerPort: 8080
        command: ["./hello"]
